@@ -39,6 +39,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   against the previous revision, whether currently deleted or live.
 * Added tooltips for the "Go" and "Search" buttons
 * (bug 11649) Show input form when Special:Whatlinkshere has no parameters
+* Show changes to pages linked to via a redirect on Special:Recentchangeslinked
 
 === Bug fixes in 1.12 ===
 
